bluec-tests/tests/valid/types_char/simple.c
int main(void) {
    unsigned char chars[4] = "abc";
    return chars[2];
}