bluec-tests/tests/invalid/types_float/missing_exponent.c
int main(void)
{
    float foo = 30.ef;
    return 4;
}